--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
 html{
 	text-align: center;
+
+}
+
+button{
+	background-color: red;
+	border: 1px solid white;
+	color: white;
+}
+input{
+	border: 1px solid red;
+}
+
+h1{
+	color: red;
 }
